Bug 969289 - Treat the null image pointer as a muted frame. r=rillian